NetBSD Problem Report #20031

Received: (qmail 14517 invoked by uid 605); 24 Jan 2003 13:42:23 -0000
Message-Id: <20030124134144.247AD19AC7@dmath5.geometrie.tuwien.ac.at>
Date: Fri, 24 Jan 2003 14:41:44 +0100 (CET)
From: wiz@netbsd.org
Sender: gnats-bugs-owner@netbsd.org
Reply-To: wiz@netbsd.org
To: gnats-bugs@gnats.netbsd.org
Subject: libcurses: ESCDELAY missing
X-Send-Pr-Version: 3.95

>Number:         20031
>Category:       lib
>Synopsis:       libcurses: ESCDELAY missing
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    jdc
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jan 24 13:43:00 +0000 2003
>Closed-Date:    Tue Apr 08 18:58:07 +0000 2003
>Last-Modified:  Tue Apr 08 18:58:07 +0000 2003
>Originator:     Thomas Klausner
>Release:        NetBSD 1.6L
>Organization:

>Environment:
all
>Description:
libcurses does not provide ESCDELAY.
ncurses provides this define.
>How-To-Repeat:
Try to build centericq with native curses.
>Fix:
Not provided.
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->analyzed 
State-Changed-By: jdc 
State-Changed-When: Sat Apr 5 12:11:22 PST 2003 
State-Changed-Why:  
I have an idea how to code this. 


Responsible-Changed-From-To: lib-bug-people->jdc 
Responsible-Changed-By: jdc 
Responsible-Changed-When: Sat Apr 5 12:11:22 PST 2003 
Responsible-Changed-Why:  
Took ownership. 

From: Julian Coleman <jdc@netbsd.org>
To: gnats-bugs@gnats.netbsd.org
Cc:  
Subject: pr/20031 CVS commit: src/lib/libcurses
Date: Tue,  8 Apr 2003 21:55:44 +0300 (EEST)

 Module Name:	src
 Committed By:	jdc
 Date:		Tue Apr  8 18:55:44 UTC 2003

 Modified Files:
 	src/lib/libcurses: curses.h curses_input.3 getch.c

 Log Message:
 Add ESCDELAY variable to control the inter-key delay in escape sequences.
 Fixes PR 20031 by Thomas Klausner.


 To generate a diff of this commit:
 cvs rdiff -r1.73 -r1.74 src/lib/libcurses/curses.h
 cvs rdiff -r1.7 -r1.8 src/lib/libcurses/curses_input.3
 cvs rdiff -r1.40 -r1.41 src/lib/libcurses/getch.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: analyzed->closed 
State-Changed-By: jdc 
State-Changed-When: Tue Apr 8 11:57:12 PDT 2003 
State-Changed-Why:  
ESCDELAY now added. 
Thanks for the PR. 
>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.