Add ESCDELAY variable to control the inter-key delay in escape sequences. Fixes PR 20031 by Thomas Klausner.